--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -1,9 +1,8 @@
 name: Generate documentation
 
 on:
-  push:
-    tags:
-      - v*.*
+  release:
+    types: [published]
 
   # This event creates an artifact for download but does not write to
   # the BioCro documentation repository:
