--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -1,12 +1,29 @@
 name: Generate documentation
 
 on:
-  release:
-    types: [published]
 
-  # This event creates an artifact for download but does not write to
-  # the BioCro documentation repository:
-  pull_request:
+  workflow_call:
+    inputs:
+      pkgdown-build:
+        description: Build the pkgdown site
+        type: boolean
+        default: true
+      bookdown-build:
+        description: Build the developer manual
+        type: boolean
+        default: true
+      doxygen-build:
+        description: Build the Doxygen documentation
+        type: boolean
+        default: true
+      publish:
+        description: Publish the documentation
+        type: boolean
+        default: true
+      custom-url:
+        description: The base url for the pkgdown documentation
+        type: string
+        default: '' # (means the default will be computed below)
 
   workflow_dispatch:
     inputs:
@@ -22,14 +39,21 @@ on:
         description: Build the Doxygen documentation
         type: boolean
         default: true
+      publish:
+        description: Publish the documentation
+        type: boolean
+        default: false
+      custom-url:
+        description: The base url for the pkgdown documentation
+        type: string
+        default: '' # (means the default will be computed below)
 
 env:
   # The documentation repository:
   PUBLISH_TO: "gsrohde/eraseme"
   # Relative path from the GitHub workspace directory to the directory
   # where the documentation repository will be checked out:
-  BIOCRO_DOCUMENTATION_ROOT: biocro_documentation_repository
-  VERSION: ${{ github.ref_name }}
+  BIOCRO_DOCUMENTATION_ROOT: biocro_documentation_root
 
 jobs:
   build:
@@ -39,8 +63,15 @@ jobs:
 
     steps:
 
+    - name: 0. Set the environment variable VERSION using the GitHub ref name
+      run: |
+        # This is a very arcane Bash syntax for replacing occurrences of '/' in GITHUB_REF_NAME with '_':
+        echo "VERSION=${GITHUB_REF_NAME////_}" >> $GITHUB_ENV
+
     - name: 1. Check out repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+      with:
+        submodules: true
 
     - name: 2. Set up R
       if: inputs.bookdown-build || inputs.pkgdown-build
@@ -60,9 +91,21 @@ jobs:
       if: inputs.bookdown-build
       uses: './.github/actions/render_bookdown_book'
 
-    - name: 5. Build pkgdown book
+    - name: 5a. Compute base URL for pkgdown book
+      if: inputs.pkgdown-build
+      run: |
+        if [[ inputs.publish == true ]]             # Use the computed default if we are publishing the site.
+        then
+          echo "BASE_URL=https://${PUBLISH_TO/\//.github.io\/}/$VERSION/pkgdown/" >> $GITHUB_ENV
+        else
+          echo "BASE_URL=${{ inputs.custom-url }}" >> $GITHUB_ENV
+        fi
+
+    - name: 5b. Build pkgdown book
       if: inputs.pkgdown-build
       uses: ./.github/actions/build_pkgdown_site
+      with:
+        base_url: ${{ env.BASE_URL }}
 
     - name: 6. Build Doxygen documentation
       if: inputs.doxygen-build
@@ -73,18 +116,21 @@ jobs:
     # checkout action gives us permission to check in our changes
     # later, in the Push step:
 
-    - name: 7. Check out the target "PUBLISH_TO" repository
-      if: github.event_name != 'pull_request'
-      uses: actions/checkout@v2
+    - name: 7a. Check out the target "PUBLISH_TO" repository
+      if: inputs.publish
+      uses: actions/checkout@v3
       with:
         repository: ${{ env.PUBLISH_TO }}
         path: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
         ssh-key:  ${{ secrets.PRIVATE_SSH_KEY }}
 
+    - name: 7b. Make sure that the root documentation directory exists
+      if: '!inputs.publish'
+      run: |
+        mkdir -p ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
+
     - name: 8. "Copy newly-generated documentation files into working
                 copy of the target repository"
-
-      if: github.event_name != 'pull_request'
 
       env:
 
@@ -113,15 +159,13 @@ jobs:
         if [[ ${{ inputs.pkgdown-build }} == true ]]
         then
             echo "Copying pkgdown files"
-            rsync -a --delete --filter "protect /bookdown_book" \
-                              --filter "protect /doxygen" \
-                  -v -v ../docs/ $VERSION || true
+            rsync -a --delete ../docs/ $VERSION/pkgdown || true
         fi
 
         if [[ ${{ inputs.bookdown-build }} == true ]]
         then
             echo "copying bookdown files"
-            rsync -a --delete ../bookdown/_book/ $VERSION/bookdown_book || true
+            rsync -a --delete ../bookdown/_book/ $VERSION/bookdown || true
         fi
 
         if [[ ${{ inputs.doxygen-build }} == true ]]
@@ -138,15 +182,16 @@ jobs:
 
     - name: 9. Commit updates and push to target (documentation) repository
 
-      if: github.event_name != 'pull_request'
+      if: inputs.publish
 
       working-directory: ${{ env.BIOCRO_DOCUMENTATION_ROOT }}
       run: |
 
-        # user.name is somewhat arbitrary but must be provided:
+        # user.name and user.email are somewhat arbitrary but must be provided:
         git config user.name biocro-action
+        git config user.email bogus@url.com
         git add .
-        git commit -m "generated pgkdown and bookdown documentation"
+        git commit -m "generated pkgdown and bookdown documentation"
         git push
 
     - name: 10. Zip documentation
@@ -156,7 +201,8 @@ jobs:
 
     - name: 11. Upload artifact containing documentation
       if: always() # Even if some steps fail, at least try to make a documentation artifact.
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: biocro-documentation
         path: biocro-docs-from-${{ env.VERSION }}.tgz
+        retention-days: 3
